Fix center dragdrop alignment and formatting

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
 }
 
 #arc-path {
-  fill: #2196F3;
+  fill: #2196F33f;
   stroke: #1565c0;
   stroke-width: 10;  
   stroke-dasharray: 30,15;
